--- a/_posts/2023-11-16-binary.md
+++ b/_posts/2023-11-16-binary.md
@@ -8,9 +8,8 @@ itself for instance it will include a graphing calculator that you can get by cl
 ## Done by 11/23
 So for our calculator, we want to have a couple of different backgrounds and themes. So using SASS we will create one general theme that has a rainbow background and blue buttons for the calculator roughly this color #ADD8E6. Then when the switch button is clicked to go to the graphing calculator the colors will switch to be more monochromatic colors like only a black background with the remaining blue buttons.  
 
-## Code we will use
+## Current Code
 
- <p>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -77,7 +76,6 @@ So for our calculator, we want to have a couple of different backgrounds and the
       }
     }
   </script>
-  </p>
 
 </body>
 </html>
