--- a/_posts/2023-11-16-binary.md
+++ b/_posts/2023-11-16-binary.md
@@ -24,6 +24,7 @@ So for our calculator, we want to have a couple of different backgrounds and the
   </style>
 </head>
 <body>
+# code for calc, changes: need to make binary and make it hex
 
   <h2>Four-Function Calculator</h2>
 
