--- a/_posts/2023-11-16-binary.md
+++ b/_posts/2023-11-16-binary.md
@@ -14,7 +14,7 @@ So for our calculator, we want to have a couple of different backgrounds and the
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Four-Function Calculator</title>
+  <title>Binary Calculator</title>
   <style>
     input {
       width: 50px;
