--- a/_posts/2023-11-16-binary.md
+++ b/_posts/2023-11-16-binary.md
@@ -1,82 +1,109 @@
-## Binary calculator Plan
-
-## Done by 11/20
-We will create the calculator by matching each number to its binary version we will code the actual calculator using html and javascript it would include similar features to a calculator 
-itself for instance it will include a graphing calculator that you can get by clicking a switch so the first version of the calculator will be the normal four function calculator however we will create a switch that once clicked will change into a graphing calculator  
-
-
-## Done by 11/23
-So for our calculator, we want to have a couple of different backgrounds and themes. So using SASS we will create one general theme that has a rainbow background and blue buttons for the calculator roughly this color #ADD8E6. Then when the switch button is clicked to go to the graphing calculator the colors will switch to be more monochromatic colors like only a black background with the remaining blue buttons.  
-
-## Current Progress
 
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Binary Calculator</title>
-  <style>
-    input {
-      width: 50px;
-      height: 50px;
-      font-size: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Decimal to Binary Calculator</title>
+    <!-- CSS Styles for the Calculator UI -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        input {
+            width: 150px;
+            padding: 5px;
+            margin: 5px;
+        }
+        button {
+            padding: 8px;
+            margin: 5px;
+            cursor: pointer;
+        }
+        .keyboard {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 5px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-# code for calc, changes: need to make binary and make it hex
+<h1>Decimal to Binary Calculator</h1>
+<!-- Calculator Form -->
+<form id="decimalToBinaryCalculator">
+    <label for="num1">Decimal Number 1:</label>
+    <input type="text" id="num1" placeholder="Enter decimal number">
+    <br>
+    <label for="num2">Decimal Number 2:</label>
+    <input type="text" id="num2" placeholder="Enter decimal number">
+    <br>
+    <!-- Buttons for Arithmetic Operations -->
+    <button type="button" onclick="performOperation('add')">Addition (+)</button>
+    <button type="button" onclick="performOperation('subtract')">Subtraction (-)</button>
+    <button type="button" onclick="performOperation('multiply')">Multiplication (*)</button>
+    <button type="button" onclick="performOperation('divide')">Division (/)</button>
+    <br>
+    <label for="result">Result (Binary):</label>
+    <input type="text" id="result" readonly>
+</form>
+<!-- Number buttons generated dynamically -->
+<div class="keyboard">
+    <!-- Generate number buttons from 0 to 9 -->
+    <script>
+        for (var i = 0; i <= 9; i++) {
+            document.write("<button onclick=\"addToInput('" + i + "')\">" + i + "</button>");
+        }
+    </script>
+</div>
+<script>
+    // Function to perform arithmetic operations
+    function performOperation(operation) {
+        var num1 = document.getElementById("num1").value;
+        var num2 = document.getElementById("num2").value;
+        var resultField = document.getElementById("result");
 
-  <h2>Four-Function Calculator</h2>
+        // Convert input numbers to binary
+        var binaryNum1 = decimalToBinary(parseInt(num1, 10));
+        var binaryNum2 = decimalToBinary(parseInt(num2, 10));
 
-  <table>
-    <tr>
-      <td colspan="4"><input type="text" id="display" disabled></td>
-    </tr>
-    <tr>
-      <td><input type="button" value="7" onclick="appendToDisplay('7')"></td>
-      <td><input type="button" value="8" onclick="appendToDisplay('8')"></td>
-      <td><input type="button" value="9" onclick="appendToDisplay('9')"></td>
-      <td><input type="button" value="/" onclick="appendToDisplay('/')"></td>
-    </tr>
-    <tr>
-      <td><input type="button" value="4" onclick="appendToDisplay('4')"></td>
-      <td><input type="button" value="5" onclick="appendToDisplay('5')"></td>
-      <td><input type="button" value="6" onclick="appendToDisplay('6')"></td>
-      <td><input type="button" value="-" onclick="appendToDisplay('-')"></td>
-    </tr>
-    <tr>
-      <td><input type="button" value="1" onclick="appendToDisplay('1')"></td>
-      <td><input type="button" value="2" onclick="appendToDisplay('2')"></td>
-      <td><input type="button" value="3" onclick="appendToDisplay('3')"></td>
-      <td><input type="button" value="+" onclick="appendToDisplay('+')"></td>
-    </tr>
-    <tr>
-      <td><input type="button" value="0" onclick="appendToDisplay('0')"></td>
-      <td><input type="button" value="." onclick="appendToDisplay('.')"></td>
-      <td><input type="button" value="=" onclick="calculateResult()"></td>
-      <td><input type="button" value="C" onclick="clearDisplay()"></td>
-    </tr>
-  </table>
-
-  <script>
-    function appendToDisplay(value) {
-      document.getElementById('display').value += value;
+        // Perform the selected operation on binary numbers
+        switch (operation) {
+            case 'add':
+                resultField.value = decimalToBinary(binaryToDecimal(binaryNum1) + binaryToDecimal(binaryNum2));
+                break;
+            case 'subtract':
+                resultField.value = decimalToBinary(binaryToDecimal(binaryNum1) - binaryToDecimal(binaryNum2));
+                break;
+            case 'multiply':
+                resultField.value = decimalToBinary(binaryToDecimal(binaryNum1) * binaryToDecimal(binaryNum2));
+                break;
+            case 'divide':
+                resultField.value = decimalToBinary(Math.floor(binaryToDecimal(binaryNum1) / binaryToDecimal(binaryNum2)));
+                break;
+            default:
+                resultField.value = "Invalid operation";
+        }
     }
 
-    function clearDisplay() {
-      document.getElementById('display').value = '';
+    // Function to convert decimal number to binary
+    function decimalToBinary(decimalNum) {
+        return (decimalNum >>> 0).toString(2); // Using ">>> 0" to treat the input as a 32-bit unsigned integer
     }
 
-    function calculateResult() {
-      var displayValue = document.getElementById('display').value;
-      try {
-        var result = eval(displayValue);
-        document.getElementById('display').value = result;
-      } catch (error) {
-        document.getElementById('display').value = 'Error';
-      }
+    // Function to convert binary number to decimal
+    function binaryToDecimal(binaryStr) {
+        return parseInt(binaryStr, 2);
     }
-  </script>
 
+    // Function to add numbers to the active input field
+    function addToInput(number) {
+        var activeInput = document.activeElement;
+        if (activeInput.tagName === "INPUT" && activeInput.type === "text") {
+            activeInput.value += number;
+        }
+    }
+</script>
 </body>
 </html>
