--- a/_posts/2023-11-16-binary.md
+++ b/_posts/2023-11-16-binary.md
@@ -1,11 +1,13 @@
 
 <html lang="en">
 <head>
+    <!-- Meta tags for character set and viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decimal to Binary Calculator</title>
     <!-- CSS Styles for the Calculator UI -->
     <style>
+        /* Styles for the calculator interface */
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -33,6 +35,7 @@
 <h1>Decimal to Binary Calculator</h1>
 <!-- Calculator Form -->
 <form id="decimalToBinaryCalculator">
+    <!-- Input fields for decimal numbers -->
     <label for="num1">Decimal Number 1:</label>
     <input type="text" id="num1" placeholder="Enter decimal number">
     <br>
@@ -45,6 +48,7 @@
     <button type="button" onclick="performOperation('multiply')">Multiplication (*)</button>
     <button type="button" onclick="performOperation('divide')">Division (/)</button>
     <br>
+    <!-- Result display field -->
     <label for="result">Result (Binary):</label>
     <input type="text" id="result" readonly>
 </form>
@@ -52,13 +56,15 @@
 <div class="keyboard">
     <!-- Generate number buttons from 0 to 9 -->
     <script>
+        // Script to generate number buttons dynamically
         for (var i = 0; i <= 9; i++) {
             document.write("<button onclick=\"addToInput('" + i + "')\">" + i + "</button>");
         }
     </script>
 </div>
 <script>
-    // Function to perform arithmetic operations
+    // JavaScript code for calculator functionality
+// Function to perform arithmetic operations
     function performOperation(operation) {
         var num1 = document.getElementById("num1").value;
         var num2 = document.getElementById("num2").value;
@@ -92,7 +98,7 @@
     function binaryToDecimal(binaryStr) {
         return parseInt(binaryStr, 2);
     }
-    // Function to add numbers to the active input field
+// Function to add numbers to the active input field
     function addToInput(number) {
         var activeInput = document.activeElement;
         if (activeInput.tagName === "INPUT" && activeInput.type === "text") {
@@ -102,3 +108,71 @@
 </script>
 </body>
 </html>
+
+
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Binary to Hexadecimal Converter</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        input {
+            width: 250px;
+            padding: 5px;
+            margin: 10px;
+        }
+        button {
+            padding: 8px;
+            margin: 5px;
+            cursor: pointer;
+        }
+        #result {
+            width: 250px;
+        }
+    </style>
+</head>
+
+<style>
+        /* Updated CSS Styles to make the calculator pink */
+
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+            background-color: #f7e6e6; /* Light pink background color */
+        }
+
+        input {
+            width: 150px;
+            padding: 5px;
+            margin: 5px;
+            background-color: #ffe3e3; /* Light pink input background color */
+            border: 1px solid #ffcccc; /* Light pink border color */
+        }
+
+        button {
+            padding: 8px;
+            margin: 5px;
+            cursor: pointer;
+            background-color: #ffcccc; /* Pink button background color */
+            border: none;
+            color: #fff; /* Text color for buttons */
+        }
+
+        .keyboard {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 5px;
+            margin-top: 20px;
+        }
+
+        h1 {
+            color: #ff4d6b; /* Pink color for heading text */
+        }
+    </style>
