--- a/_posts/2023-11-16-binary.md
+++ b/_posts/2023-11-16-binary.md
@@ -202,3 +202,136 @@ vantaInstance({
   gyroControls: false
 });
 </script>
+
+
+
+
+
+<!-- HTML code for Decimal to Binary Calculator -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Decimal to Binary Calculator</title>
+    <!-- CSS Styles for the Calculator UI -->
+    <style>
+        /* Styles for the calculator interface */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        input {
+            width: 150px;
+            padding: 5px;
+            margin: 5px;
+        }
+        button {
+            padding: 8px;
+            margin: 5px;
+            cursor: pointer;
+        }
+        .keyboard {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 5px;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Decimal to Binary Calculator</h1>
+    <!-- Calculator Form -->
+    <form id="decimalToBinaryCalculator">
+        <!-- Input fields for decimal numbers -->
+        <label for="num1">Decimal Number 1:</label>
+        <input type="text" id="num1" placeholder="Enter decimal number">
+        <br>
+        <label for="num2">Decimal Number 2:</label>
+        <input type="text" id="num2" placeholder="Enter decimal number">
+        <br>
+        <!-- Buttons for Arithmetic Operations -->
+        <button type="button" onclick="performOperation('add')">Addition (+)</button>
+        <button type="button" onclick="performOperation('subtract')">Subtraction (-)</button>
+        <button type="button" onclick="performOperation('multiply')">Multiplication (*)</button>
+        <button type="button" onclick="performOperation('divide')">Division (/)</button>
+        <br>
+        <!-- Result display field -->
+        <label for="result">Result (Binary):</label>
+        <input type="text" id="result" readonly>
+    </form>
+    <!-- Number buttons generated dynamically -->
+    <div class="keyboard">
+        <!-- Generate number buttons from 0 to 9 -->
+        <script>
+            // Script to generate number buttons dynamically
+            for (var i = 0; i <= 9; i++) {
+                document.write("<button onclick=\"addToInput('" + i + "')\">" + i + "</button>");
+            }
+        </script>
+    </div>
+
+    <!-- JavaScript code for calculator functionality -->
+    <script>
+        // Function to perform arithmetic operations
+        function performOperation(operation) {
+            var num1 = parseInt(document.getElementById("num1").value, 10);
+            var num2 = parseInt(document.getElementById("num2").value, 10);
+            var resultField = document.getElementById("result");
+
+            // Convert input numbers to binary
+            var binaryNum1 = decimalToBinary(num1);
+            var binaryNum2 = decimalToBinary(num2);
+
+            // Perform the selected operation on binary numbers
+            switch (operation) {
+                case 'add':
+                    resultField.value = decimalToBinary(binaryToDecimal(binaryNum1) + binaryToDecimal(binaryNum2));
+                    break;
+                case 'subtract':
+                    // Subtract using two's complement by inverting and adding 1
+                    resultField.value = decimalToBinary(binaryToDecimal(binaryNum1) + invertAndAddOne(binaryNum2));
+                    break;
+                case 'multiply':
+                    resultField.value = decimalToBinary(binaryToDecimal(binaryNum1) * binaryToDecimal(binaryNum2));
+                    break;
+                case 'divide':
+                    resultField.value = decimalToBinary(Math.floor(binaryToDecimal(binaryNum1) / binaryToDecimal(binaryNum2)));
+                    break;
+                default:
+                    resultField.value = "Invalid operation";
+            }
+        }
+
+        // Function to convert decimal number to binary (8-bit representation)
+        function decimalToBinary(decimalNum) {
+            return (decimalNum >>> 0).toString(2).padStart(8, '0'); // 8-bit binary representation
+        }
+
+        // Function to convert binary number to decimal
+        function binaryToDecimal(binaryStr) {
+            return parseInt(binaryStr, 2);
+        }
+
+        // Function to add numbers to the active input field
+        function addToInput(number) {
+            var activeInput = document.activeElement;
+            if (activeInput.tagName === "INPUT" && activeInput.type === "text") {
+                activeInput.value += number;
+            }
+        }
+
+        // Function to invert binary and add 1 (two's complement)
+        function invertAndAddOne(binaryStr) {
+            var inverted = '';
+            for (var i = 0; i < binaryStr.length; i++) {
+                inverted += binaryStr[i] === '0' ? '1' : '0';
+            }
+            var addOne = (parseInt(inverted, 2) + 1).toString(2).padStart(8, '0'); // 8-bit binary
+            return addOne;
+        }
+    </script>
+</body>
+</html>
+
